[gd_scene load_steps=9 format=3 uid="uid://d1emixqcjfjrq"]

[ext_resource type="StyleBox" uid="uid://cdxdgkx4udry7" path="res://gui/conversation/style_tab_active_dark.tres" id="1_ln2my"]
[ext_resource type="Script" path="res://gui/conversation/conversation_tab.gd" id="2_mm7r5"]
[ext_resource type="Texture2D" uid="uid://dvtx6j1xg685a" path="res://gui/common/icons/close.png" id="3_265fe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tqj3h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ml47y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jghr4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_awdjh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xbnp0"]

[node name="ConversationTab" type="PanelContainer"]
custom_minimum_size = Vector2(0, 28)
offset_right = 84.0
offset_bottom = 28.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("1_ln2my")
script = ExtResource("2_mm7r5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="NameButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_tqj3h")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ml47y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jghr4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_awdjh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xbnp0")
text = "Untitled"
flat = true
clip_text = true

[node name="CloseButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource("3_265fe")
ignore_texture_size = true
stretch_mode = 3

[connection signal="pressed" from="HBoxContainer/NameButton" to="." method="_on_NameButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
